--- a/image-palettizer/package.json
+++ b/image-palettizer/package.json
@@ -12,6 +12,7 @@
     "stackblur-canvas": "^2.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.13.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
