--- a/image-palettizer/package.json
+++ b/image-palettizer/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "img-comparison-slider": "^7.3.0",
     "js-cookie": "^3.0.1",
     "stackblur-canvas": "^2.5.0",
     "vue": "^2.6.11",
