--- a/image-palettizer/package.json
+++ b/image-palettizer/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^3.0.1",
     "stackblur-canvas": "^2.5.0",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.2.0",
     "vue-select": "^3.13.2",
     "vuetify": "^2.4.0",
