--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,5 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/image-palettizer/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "monthly"
+
